module/openapi-annotations-plugin/src/test/resources/net/jacobpeterson/jet/openapiannotationsplugin/testproject/success/none/src/main/java/Test.java
import org.jspecify.annotations.NullMarked;

@NullMarked
public final class Test {}
