module/openapi-annotations-plugin/src/test/resources/net/jacobpeterson/jet/openapiannotationsplugin/testproject/fail/empty/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.OpenApi;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi
public final class Test {}
